Style spinner with loader class name

--- a/src/Components/QuoteContainer/QuoteContainer.css
+++ b/src/Components/QuoteContainer/QuoteContainer.css
@@ -1,8 +1,31 @@
 .quote-container{
     background-color: beige;
-    height: 50vh;
-
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    /* align-items: center;
+    justify-content: center; */
 }
+.meme{
+    width: 90%;
+    align-self: center;
+}
+
+.loader {
+    margin: 5%;
+    align-self: center;
+    border: 16px solid #f3f3f3; /* Light grey */
+    border-top: 16px solid #3498db; /* Blue */
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    animation: spin 2s linear infinite;
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
 
 .inner-quote-container{
     margin: 5%;
